@@ -1,0 +1,5 @@
+[[svgSanitize?
+    &file=`assets/components/romanescobackyard/icons/status/[[+alias]].svg`
+    &title=`[[+name]]`
+    &toSymbol=`1`
+]]
