@@ -14,16 +14,19 @@
     <script>document.documentElement.className = 'js';</script>
 
     <link href="[[!++romanesco.semantic_dist_path]]/semantic[[++minify_css_js:eq=`1`:then=`.min`]].css" rel="stylesheet">
-    <link rel="stylesheet" href="[[getContextSetting? &context=`web` &setting=`site_url`]]assets/css/backgrounds.css">
+    <link href="[[getContextSetting? &context=`web` &setting=`site_url`]]assets/css/backgrounds.css" rel="stylesheet">
+    
+    [[~[[*id]]:contains=`status`:or:contains=`hub`:then=`1`:toPlaceholder=`load_assets_hub`]]
+    [[+load_assets_hub:eq=`1`:then=`<link href="[[!++romanesco.semantic_dist_path]]/components/modal.css" rel="stylesheet">`]]
 
     [[cbHasFields?
         &field=`[[++romanesco.cb_field_code_id]]`
-        &then=`<link rel="stylesheet" href="[[++romanesco.custom_vendor_path]]/prism/prism.min.css">`
+        &then=`<link href="[[++romanesco.custom_vendor_path]]/prism/prism.min.css" rel="stylesheet">`
     ]]
     [[cbHasFields?
         &field=`[[++romanesco.cb_field_map_id]]`
         &then=`
-            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw==" crossorigin=""/>
+            <link href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css" integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw==" crossorigin="" rel="stylesheet"/>
             <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js" integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA==" crossorigin=""></script>
         `
     ]]
